src/generated/TemplateParser.java
// Generated from grammar/TemplateParser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TemplateParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		HTML_DOCTYPE=1, HTML_COMMENT=2, STYLE_OPEN=3, SCRIPT_OPEN=4, JINJA_EXPR_START=5, 
		JINJA_STMT_START=6, JINJA_COMMENT=7, HTML_TAG_CLOSE_START=8, HTML_TAG_OPEN=9, 
		HTML_SELF_CLOSE=10, HTML_TAG_END=11, HTML_TAG_NAME=12, HTML_ATTR_NAME=13, 
		HTML_ATTR_EQUALS=14, HTML_ATTR_VALUE=15, HTML_TEXT=16, HTML_WS=17, CSS_STYLE_CLOSE=18, 
		CSS_COMMENT=19, CSS_ID_SELECTOR=20, CSS_CLASS_SELECTOR=21, CSS_ELEMENT_SELECTOR=22, 
		CSS_LBRACE=23, CSS_RBRACE=24, CSS_COLON=25, CSS_SEMI=26, CSS_COMMA=27, 
		CSS_NUMBER=28, CSS_UNIT=29, CSS_COLOR=30, CSS_URL=31, CSS_STRING=32, CSS_IDENTIFIER=33, 
		CSS_WS=34, SCRIPT_CLOSE=35, SCRIPT_TEXT=36, JINJA_EXPR_END=37, JINJA_ID=38, 
		JINJA_INT=39, JINJA_FLOAT=40, JINJA_STRING=41, JINJA_DOT=42, JINJA_ARITH_OP=43, 
		JINJA_COMP_OP=44, JINJA_BOOL_OP=45, JINJA_LPAREN=46, JINJA_RPAREN=47, 
		JINJA_COMMA=48, JINJA_WS=49, JINJA_STMT_END=50, JINJA_IF=51, JINJA_ELSE=52, 
		JINJA_ELIF=53, JINJA_ENDIF=54, JINJA_FOR=55, JINJA_IN=56, JINJA_ENDFOR=57, 
		JINJA_BLOCK=58, JINJA_ENDBLOCK=59, JINJA_STMT_ID=60, JINJA_STMT_INT=61, 
		JINJA_STMT_STRING=62, JINJA_STMT_DOT=63, JINJA_OP=64, JINJA_STMT_WS=65;
	public static final int
		RULE_template = 0, RULE_element = 1, RULE_htmlElement = 2, RULE_attribute = 3, 
		RULE_htmlText = 4, RULE_jinjaStatement = 5, RULE_jinjaIf = 6, RULE_jinjaFor = 7, 
		RULE_jinjaExpression = 8, RULE_condition = 9, RULE_expression = 10, RULE_cssBlock = 11, 
		RULE_cssRule = 12, RULE_declaration = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"template", "element", "htmlElement", "attribute", "htmlText", "jinjaStatement", 
			"jinjaIf", "jinjaFor", "jinjaExpression", "condition", "expression", 
			"cssBlock", "cssRule", "declaration"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'<style>'", "'<script>'", "'{{'", "'{%'", null, "'</'", 
			"'<'", "'/>'", "'>'", null, null, "'='", null, null, null, "'</style>'", 
			null, null, null, null, "'{'", "'}'", "':'", "';'", "','", null, null, 
			null, null, null, null, null, "'</script>'", null, "'}}'", null, null, 
			null, null, null, null, null, null, null, null, null, null, "'%}'", "'if'", 
			"'else'", "'elif'", "'endif'", "'for'", "'in'", "'endfor'", "'block'", 
			"'endblock'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "HTML_DOCTYPE", "HTML_COMMENT", "STYLE_OPEN", "SCRIPT_OPEN", "JINJA_EXPR_START", 
			"JINJA_STMT_START", "JINJA_COMMENT", "HTML_TAG_CLOSE_START", "HTML_TAG_OPEN", 
			"HTML_SELF_CLOSE", "HTML_TAG_END", "HTML_TAG_NAME", "HTML_ATTR_NAME", 
			"HTML_ATTR_EQUALS", "HTML_ATTR_VALUE", "HTML_TEXT", "HTML_WS", "CSS_STYLE_CLOSE", 
			"CSS_COMMENT", "CSS_ID_SELECTOR", "CSS_CLASS_SELECTOR", "CSS_ELEMENT_SELECTOR", 
			"CSS_LBRACE", "CSS_RBRACE", "CSS_COLON", "CSS_SEMI", "CSS_COMMA", "CSS_NUMBER", 
			"CSS_UNIT", "CSS_COLOR", "CSS_URL", "CSS_STRING", "CSS_IDENTIFIER", "CSS_WS", 
			"SCRIPT_CLOSE", "SCRIPT_TEXT", "JINJA_EXPR_END", "JINJA_ID", "JINJA_INT", 
			"JINJA_FLOAT", "JINJA_STRING", "JINJA_DOT", "JINJA_ARITH_OP", "JINJA_COMP_OP", 
			"JINJA_BOOL_OP", "JINJA_LPAREN", "JINJA_RPAREN", "JINJA_COMMA", "JINJA_WS", 
			"JINJA_STMT_END", "JINJA_IF", "JINJA_ELSE", "JINJA_ELIF", "JINJA_ENDIF", 
			"JINJA_FOR", "JINJA_IN", "JINJA_ENDFOR", "JINJA_BLOCK", "JINJA_ENDBLOCK", 
			"JINJA_STMT_ID", "JINJA_STMT_INT", "JINJA_STMT_STRING", "JINJA_STMT_DOT", 
			"JINJA_OP", "JINJA_STMT_WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TemplateParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TemplateParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TemplateParser.EOF, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public TemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitTemplate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateContext template() throws RecognitionException {
		TemplateContext _localctx = new TemplateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_template);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 66152L) != 0)) {
				{
				{
				setState(28);
				element();
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(34);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementContext extends ParserRuleContext {
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public JinjaStatementContext jinjaStatement() {
			return getRuleContext(JinjaStatementContext.class,0);
		}
		public JinjaExpressionContext jinjaExpression() {
			return getRuleContext(JinjaExpressionContext.class,0);
		}
		public HtmlTextContext htmlText() {
			return getRuleContext(HtmlTextContext.class,0);
		}
		public CssBlockContext cssBlock() {
			return getRuleContext(CssBlockContext.class,0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);
		try {
			setState(41);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HTML_TAG_OPEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(36);
				htmlElement();
				}
				break;
			case JINJA_STMT_START:
				enterOuterAlt(_localctx, 2);
				{
				setState(37);
				jinjaStatement();
				}
				break;
			case JINJA_EXPR_START:
				enterOuterAlt(_localctx, 3);
				{
				setState(38);
				jinjaExpression();
				}
				break;
			case HTML_TEXT:
				enterOuterAlt(_localctx, 4);
				{
				setState(39);
				htmlText();
				}
				break;
			case STYLE_OPEN:
				enterOuterAlt(_localctx, 5);
				{
				setState(40);
				cssBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementContext extends ParserRuleContext {
		public TerminalNode HTML_TAG_OPEN() { return getToken(TemplateParser.HTML_TAG_OPEN, 0); }
		public List<TerminalNode> HTML_TAG_NAME() { return getTokens(TemplateParser.HTML_TAG_NAME); }
		public TerminalNode HTML_TAG_NAME(int i) {
			return getToken(TemplateParser.HTML_TAG_NAME, i);
		}
		public List<TerminalNode> HTML_TAG_END() { return getTokens(TemplateParser.HTML_TAG_END); }
		public TerminalNode HTML_TAG_END(int i) {
			return getToken(TemplateParser.HTML_TAG_END, i);
		}
		public TerminalNode HTML_TAG_CLOSE_START() { return getToken(TemplateParser.HTML_TAG_CLOSE_START, 0); }
		public TerminalNode HTML_SELF_CLOSE() { return getToken(TemplateParser.HTML_SELF_CLOSE, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public HtmlElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlElement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitHtmlElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlElementContext htmlElement() throws RecognitionException {
		HtmlElementContext _localctx = new HtmlElementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_htmlElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(HTML_TAG_OPEN);
			setState(44);
			match(HTML_TAG_NAME);
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==HTML_ATTR_NAME) {
				{
				{
				setState(45);
				attribute();
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HTML_TAG_END:
				{
				setState(51);
				match(HTML_TAG_END);
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 66152L) != 0)) {
					{
					{
					setState(52);
					element();
					}
					}
					setState(57);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(58);
				match(HTML_TAG_CLOSE_START);
				setState(59);
				match(HTML_TAG_NAME);
				setState(60);
				match(HTML_TAG_END);
				}
				break;
			case HTML_SELF_CLOSE:
				{
				setState(61);
				match(HTML_SELF_CLOSE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttributeContext extends ParserRuleContext {
		public TerminalNode HTML_ATTR_NAME() { return getToken(TemplateParser.HTML_ATTR_NAME, 0); }
		public TerminalNode HTML_ATTR_EQUALS() { return getToken(TemplateParser.HTML_ATTR_EQUALS, 0); }
		public TerminalNode HTML_ATTR_VALUE() { return getToken(TemplateParser.HTML_ATTR_VALUE, 0); }
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(HTML_ATTR_NAME);
			setState(65);
			match(HTML_ATTR_EQUALS);
			setState(66);
			match(HTML_ATTR_VALUE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlTextContext extends ParserRuleContext {
		public TerminalNode HTML_TEXT() { return getToken(TemplateParser.HTML_TEXT, 0); }
		public HtmlTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlText; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitHtmlText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlTextContext htmlText() throws RecognitionException {
		HtmlTextContext _localctx = new HtmlTextContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_htmlText);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(HTML_TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JinjaStatementContext extends ParserRuleContext {
		public JinjaIfContext jinjaIf() {
			return getRuleContext(JinjaIfContext.class,0);
		}
		public JinjaForContext jinjaFor() {
			return getRuleContext(JinjaForContext.class,0);
		}
		public JinjaStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jinjaStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitJinjaStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JinjaStatementContext jinjaStatement() throws RecognitionException {
		JinjaStatementContext _localctx = new JinjaStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_jinjaStatement);
		try {
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				jinjaIf();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				jinjaFor();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JinjaIfContext extends ParserRuleContext {
		public List<TerminalNode> JINJA_STMT_START() { return getTokens(TemplateParser.JINJA_STMT_START); }
		public TerminalNode JINJA_STMT_START(int i) {
			return getToken(TemplateParser.JINJA_STMT_START, i);
		}
		public TerminalNode JINJA_IF() { return getToken(TemplateParser.JINJA_IF, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public List<TerminalNode> JINJA_STMT_END() { return getTokens(TemplateParser.JINJA_STMT_END); }
		public TerminalNode JINJA_STMT_END(int i) {
			return getToken(TemplateParser.JINJA_STMT_END, i);
		}
		public TerminalNode JINJA_ENDIF() { return getToken(TemplateParser.JINJA_ENDIF, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public TerminalNode JINJA_ELSE() { return getToken(TemplateParser.JINJA_ELSE, 0); }
		public JinjaIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jinjaIf; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitJinjaIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JinjaIfContext jinjaIf() throws RecognitionException {
		JinjaIfContext _localctx = new JinjaIfContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_jinjaIf);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(JINJA_STMT_START);
			setState(75);
			match(JINJA_IF);
			setState(76);
			condition();
			setState(77);
			match(JINJA_STMT_END);
			setState(81);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(78);
					element();
					}
					} 
				}
				setState(83);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(84);
				match(JINJA_STMT_START);
				setState(85);
				match(JINJA_ELSE);
				setState(86);
				match(JINJA_STMT_END);
				setState(90);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(87);
						element();
						}
						} 
					}
					setState(92);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				}
				break;
			}
			setState(95);
			match(JINJA_STMT_START);
			setState(96);
			match(JINJA_ENDIF);
			setState(97);
			match(JINJA_STMT_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JinjaForContext extends ParserRuleContext {
		public List<TerminalNode> JINJA_STMT_START() { return getTokens(TemplateParser.JINJA_STMT_START); }
		public TerminalNode JINJA_STMT_START(int i) {
			return getToken(TemplateParser.JINJA_STMT_START, i);
		}
		public TerminalNode JINJA_FOR() { return getToken(TemplateParser.JINJA_FOR, 0); }
		public List<TerminalNode> JINJA_STMT_ID() { return getTokens(TemplateParser.JINJA_STMT_ID); }
		public TerminalNode JINJA_STMT_ID(int i) {
			return getToken(TemplateParser.JINJA_STMT_ID, i);
		}
		public TerminalNode JINJA_IN() { return getToken(TemplateParser.JINJA_IN, 0); }
		public List<TerminalNode> JINJA_STMT_END() { return getTokens(TemplateParser.JINJA_STMT_END); }
		public TerminalNode JINJA_STMT_END(int i) {
			return getToken(TemplateParser.JINJA_STMT_END, i);
		}
		public TerminalNode JINJA_ENDFOR() { return getToken(TemplateParser.JINJA_ENDFOR, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public JinjaForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jinjaFor; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitJinjaFor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JinjaForContext jinjaFor() throws RecognitionException {
		JinjaForContext _localctx = new JinjaForContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_jinjaFor);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(JINJA_STMT_START);
			setState(100);
			match(JINJA_FOR);
			setState(101);
			match(JINJA_STMT_ID);
			setState(102);
			match(JINJA_IN);
			setState(103);
			match(JINJA_STMT_ID);
			setState(104);
			match(JINJA_STMT_END);
			setState(108);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(105);
					element();
					}
					} 
				}
				setState(110);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(111);
			match(JINJA_STMT_START);
			setState(112);
			match(JINJA_ENDFOR);
			setState(113);
			match(JINJA_STMT_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JinjaExpressionContext extends ParserRuleContext {
		public TerminalNode JINJA_EXPR_START() { return getToken(TemplateParser.JINJA_EXPR_START, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode JINJA_EXPR_END() { return getToken(TemplateParser.JINJA_EXPR_END, 0); }
		public JinjaExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jinjaExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitJinjaExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JinjaExpressionContext jinjaExpression() throws RecognitionException {
		JinjaExpressionContext _localctx = new JinjaExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_jinjaExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(JINJA_EXPR_START);
			setState(116);
			expression();
			setState(117);
			match(JINJA_EXPR_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionContext extends ParserRuleContext {
		public List<TerminalNode> JINJA_STMT_ID() { return getTokens(TemplateParser.JINJA_STMT_ID); }
		public TerminalNode JINJA_STMT_ID(int i) {
			return getToken(TemplateParser.JINJA_STMT_ID, i);
		}
		public TerminalNode JINJA_OP() { return getToken(TemplateParser.JINJA_OP, 0); }
		public TerminalNode JINJA_STMT_INT() { return getToken(TemplateParser.JINJA_STMT_INT, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_condition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(JINJA_STMT_ID);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==JINJA_OP) {
				{
				setState(120);
				match(JINJA_OP);
				setState(121);
				_la = _input.LA(1);
				if ( !(_la==JINJA_STMT_ID || _la==JINJA_STMT_INT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public List<TerminalNode> JINJA_ID() { return getTokens(TemplateParser.JINJA_ID); }
		public TerminalNode JINJA_ID(int i) {
			return getToken(TemplateParser.JINJA_ID, i);
		}
		public List<TerminalNode> JINJA_DOT() { return getTokens(TemplateParser.JINJA_DOT); }
		public TerminalNode JINJA_DOT(int i) {
			return getToken(TemplateParser.JINJA_DOT, i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplateParserVisitor ) return ((TemplateParserVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(JINJA_ID);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==JINJA_DOT) {
				{
				{
				setState(125);
				match(JINJA_DOT);
				setState(126);
				match(JINJA_ID);
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
